chore(test): reduce logback/mockito test warnings